[gd_scene load_steps=10 format=3 uid="uid://cvx8m1f87lwhs"]

[ext_resource type="Script" path="res://bodies/bacteria.gd" id="1_c3kqs"]
[ext_resource type="PackedScene" uid="uid://bwvnv4kvdejan" path="res://utils/health_component.tscn" id="2_mredk"]
[ext_resource type="Texture2D" uid="uid://bc671h037sr0m" path="res://sprites/bacteria.png" id="3_nko2l"]
[ext_resource type="PackedScene" uid="uid://bjiq1fjatlo2b" path="res://utils/threat_detection_area.tscn" id="4_7jm5a"]

[sub_resource type="Animation" id="Animation_qugav"]
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HealthComponent/Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(48, 0, 16, 16), Rect2(64, 0, 16, 16), Rect2(80, 0, 16, 16), Rect2(96, 0, 16, 16), Rect2(112, 0, 16, 16), Rect2(128, 0, 16, 16), Rect2(144, 0, 16, 16), Rect2(160, 0, 16, 16), Rect2(176, 0, 16, 16), Rect2(192, 0, 16, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HealthComponent/Sprite2D:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_wgbpx"]
length = 1.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HealthComponent/Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Rect2(0, 0, 16, 16), Rect2(16, 0, 16, 16), Rect2(32, 0, 16, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HealthComponent/Sprite2D:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w2j5g"]
_data = {
"Fleeing": SubResource("Animation_qugav"),
"Idle": SubResource("Animation_wgbpx")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4oltm"]
radius = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kfnu0"]
radius = 3.0
height = 14.0

[node name="Bacteria" type="RigidBody2D"]
collision_layer = 32
collision_mask = 107
mass = 0.02
script = ExtResource("1_c3kqs")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_w2j5g")
}
autoplay = "Idle"

[node name="HealthComponent" parent="." instance=ExtResource("2_mredk")]
unique_name_in_owner = true
initial_health = 5.0

[node name="Sprite2D" type="Sprite2D" parent="HealthComponent"]
texture = ExtResource("3_nko2l")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="ThreatDetectionArea" parent="." instance=ExtResource("4_7jm5a")]
collision_mask = 69
flee = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThreatDetectionArea"]
shape = SubResource("CircleShape2D_4oltm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_kfnu0")

[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="threat_ended" from="ThreatDetectionArea" to="." method="_on_threat_detection_area_threat_ended"]
[connection signal="threat_started" from="ThreatDetectionArea" to="." method="_on_threat_detection_area_threat_started"]
